<resources>
    <string name="app_name">Contacts Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_fragment">Splash Fragment</string>
    <string name="login_register_fragment">Login Register</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="label_login">Login</string>
    <string name="label_register">Register</string>
    <string name="sign_up_label">Sign up</string>
    <string name="new_user_label">New User?</string>
    <string name="already_registered_label">Already Registered?</string>
    <string name="sign_in_label">Sign In</string>
    <string name="empty_input_fields">Please fill required fields</string>
    <string name="invalid_email">Please add a valid email</string>
    <string name="contacts">Contacts</string>
    <string name="logout">Logout</string>
    <string name="add_user">Add User</string>
    <string name="job">Job: Leader</string>
    <string name="name">Name</string>
    <string name="no_internet">Please check your network connection</string>
    <string name="user_added_successfully">User Added Successfully</string>
    <string name="registration_success">User Registered Successfully</string>
</resources>