<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_16dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintBottom_toTopOf="@+id/edt_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_email"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_48dp"
        android:layout_marginTop="@dimen/dimen_32dp"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/hint_email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:maxLength="320"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/dimen_16dp"
        app:layout_constraintBottom_toTopOf="@+id/edt_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_brand" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_password"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_48dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/hint_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:maxLength="10"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/dimen_16dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="@id/edt_email"
        app:layout_constraintStart_toStartOf="@id/edt_email"
        app:layout_constraintTop_toBottomOf="@id/edt_email" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_48dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:background="@android:drawable/btn_default"
        android:text="@string/label_login"
        android:textAllCaps="true"
        android:textSize="@dimen/dimen_16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txt_sign_up"
        app:layout_constraintEnd_toEndOf="@id/edt_password"
        app:layout_constraintStart_toStartOf="@id/edt_password"
        app:layout_constraintTop_toBottomOf="@id/edt_password" />

    <TextView
        android:id="@+id/txt_new_user_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/new_user_label"
        android:textSize="@dimen/dimen_16sp"
        app:layout_constraintEnd_toStartOf="@+id/txt_sign_up"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <TextView
        android:id="@+id/txt_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up_label"
        android:textColor="@color/color_link"
        android:textSize="@dimen/dimen_16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txt_new_user_label"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>
