<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dimen_16dp">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_name"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_48dp"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/name"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:maxLength="320"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/dimen_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_job"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_48dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/job"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:maxLength="10"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/dimen_16dp"
        app:layout_constraintEnd_toEndOf="@id/edt_name"
        app:layout_constraintStart_toStartOf="@id/edt_name"
        app:layout_constraintTop_toBottomOf="@id/edt_name" />

    <Button
        android:id="@+id/btn_add_user"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_48dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:background="@android:drawable/btn_default"
        android:text="@string/add_user"
        android:textAllCaps="true"
        android:textSize="@dimen/dimen_16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/edt_job"
        app:layout_constraintStart_toStartOf="@id/edt_job"
        app:layout_constraintTop_toBottomOf="@id/edt_job" />


</androidx.constraintlayout.widget.ConstraintLayout>
